2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.
 * Added a return for an HTTP 1.0 response 200 OK
 * Added a return for a 'Content-type' of text/html
 * added a message header saying Hello World
 * added a body containing the server owner's name
 * added a princ.c.recv(1000) line to add more info 