@@ -3,27 +3,53 @@ import random
 import socket
 import time
 
-s = socket.socket()         # Create a socket object
-host = socket.getfqdn() # Get local machine name
-port = random.randint(8000, 9999)
-s.bind((host, port))        # Bind to the port
+def main():
+	s = socket.socket()         # Create a socket object
+        host = socket.getfqdn() # Get local machine name
+        port = random.randint(8000, 9999)
+        s.bind((host, port))        # Bind to the port
 
-print 'Starting server on', host, port
-print 'The Web server URL for this would be http://%s:%d/' % (host, port)
+        print 'Starting server on', host, port
+        print 'The Web server URL for this would be http://%s:%d/' % (host, port)
 
-s.listen(5)                 # Now wait for client connection.
+        s.listen(5)                 # Now wait for client connection.
 
-#httpcode = '''<\HTTP/1.0 200 OK> \r\nContent-Type: text/html \r\n <html>
-#\r\n<body> \r\n<h1>Hello World</h1> \r\n This is sarteleb's web server
-#\r\n</body> \r\n</html>\r\n'''
+        print 'Entering infinite loop; hit CTRL-C to exit'
+        while True:
+                #    Establish connection with client.    
+                c, (client_host, client_port) = s.accept()
+                print 'Got connection from', client_host, client_port
+                handle_connection(c)
+        return
+
+def handle_connection(conn):
+        request = conn.recv(1000)
+        method = request.split('\n')[0].split(' ')[0]
+        path = request.split('\n')[0].split(' ')[1]
+        conn.send('HTTP/1.0 200 OK\r\n')
+        conn.send('Content-type: text/html\r\n')
+        conn.send('\r\n')
+        # send a response
+        if method == 'POST':
+                conn.send('hello world')
+                return
+        elif path == '/':
+                conn.send('<h1>Hello World!</h1>')
+                conn.send('This is sarteleb\'s web server.')
+                conn.send('<br>')
+                conn.send('<a href="/content">Content</a><br />')
+                conn.send('<a href="/content">File</a><br />')
+                conn.send('<a href="/content">Image</a><br />')
+        elif path == '/content':
+                conn.send('<h1>This is sarteleb\'s content page.</h1>')
+        elif path == '/file':
+                conn.send('<h1>This is sarteleb\'s file page.</h1>')
+        elif path == '/image':
+                conn.send('<h1>This is sarteleb\'s image page.</h1>')
+        conn.close()
+        return
 
 
-print 'Entering infinite loop; hit CTRL-C to exit'
-while True:
-#    Establish connection with client.    
-        c, (client_host, client_port) = s.accept()
-        print c.recv(1000)
-        print 'Got connection from', client_host, client_port
-        c.send('HTTP/1.0 200 OK\nContent-Type: text/html\n\n')
-        c.send('<h1>Hello World!</h1> this is sarteleb\'s web server.')
-        c.close()
+
+if __name__== '__main__':
+    main()
